...
  ~ SPDX-FileCopyrightText: 2024 Alper Ozturk <alper.ozturk@nextcloud.com>
  ~ SPDX-License-Identifier: AGPL-3.0-or-later
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_all_files"
        android:enabled="true"
        android:icon="@drawable/selector_files"
        android:title="@string/bottom_navigation_menu_files_label"/>

    <item
        android:id="@+id/nav_favorites"
        android:enabled="true"
        android:icon="@drawable/selector_favorites"
        android:title="@string/bottom_navigation_menu_favorites_label"/>

    <item
        android:id="@+id/nav_assistant"
...
