...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_button"
                    style="@style/Widget.AppTheme.Button.IconButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/action_switch_grid_view"
                    app:cornerRadius="@dimen/button_corner_radius"
...
