<?xml version="1.0" encoding="utf-8"?>
<!--
  ownCloud Android client application

  Copyright (C) 2012  Bartek Przybylski
  Copyright (C) 2015-2016 ownCloud Inc.
  Copyright (C) 2016 Nextcloud

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fillViewport="true"
            android:orientation="vertical"
            android:id="@+id/scroll"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_padding"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/standard_half_padding">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/centeredRefreshButton"
                style="@style/ownCloud.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/alternate_margin"
                android:theme="@style/Button"
                android:text="@string/auth_check_server"
                android:visibility="gone"
                android:contentDescription="@string/auth_check_server"/>

            <TextView
                android:id="@+id/instructions_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:text="@string/auth_expired_basic_auth_toast"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/alternate_margin"
                android:textColor="@color/login_text_color"
                android:contentDescription="@string/auth_expired_basic_auth_toast"/>

            <FrameLayout
                android:id="@+id/hostUrlFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/zero">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_hostUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/hostUrlInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:contentDescription="@string/auth_host_address"
                        android:drawablePadding="@dimen/alternate_half_padding"
                        android:hint="@string/auth_host_url"
                        android:inputType="textUri"
                        android:paddingRight="@dimen/alternate_padding_right"
                        android:textColor="@color/login_text_color"
                        android:textColorHint="@color/login_text_color">

                        <requestFocus/>
                    </EditText>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/embeddedRefreshButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/alternate_half_padding"
                    android:padding="@dimen/zero"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_refresh"
                    android:visibility="gone"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/auth_refresh_button"
                    />
            </FrameLayout>

            <TextView
                android:id="@+id/server_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/alternate_margin"
                android:drawableLeft="@android:drawable/stat_notify_sync"
                android:drawablePadding="@dimen/alternate_half_padding"
                android:gravity="center_vertical"
                android:textColor="@color/login_text_color"
                android:text="@string/auth_testing_connection"
                android:minHeight="@dimen/display_text_min_height"
                android:contentDescription="@string/auth_testing_connection"/>

            <CheckBox
                android:id="@+id/oauth_onOff_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onCheckClick"
                android:text="@string/oauth_check_onoff"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:contentDescription="@string/oauth_check_onoff"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_oAuthEntryPoint_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/oAuthEntryPoint_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:text="@string/oauth2_url_endpoint_auth"
                    android:textColor="@color/login_text_color"
                    android:textColorHint="@color/login_text_hint_color"
                    android:visibility="gone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_oAuthEntryPoint_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/oAuthEntryPoint_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textUri"
                    android:singleLine="true"
                    android:text="@string/oauth2_url_endpoint_access"
                    android:textColor="@color/login_text_color"
                    android:textColorHint="@color/login_text_hint_color"
                    android:visibility="gone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_account_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/auth_username"
                    android:ems="10"
                    android:hint="@string/auth_username"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/login_text_color"
                    android:textColorHint="@color/login_text_hint_color"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_account_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/auth_password"
                    android:drawablePadding="@dimen/alternate_half_padding"
                    android:ems="10"
                    android:hint="@string/auth_password"
                    android:inputType="textPassword"
                    android:textColor="@color/login_text_color"
                    android:textColorHint="@color/login_text_hint_color"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/auth_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/alternate_margin"
                android:drawableLeft="@android:drawable/stat_notify_sync"
                android:drawablePadding="@dimen/alternate_half_padding"
                android:gravity="center_vertical"
                android:text="@string/auth_unauthorized"
                android:textColor="@color/login_text_color"
                android:contentDescription="@string/auth_unauthorized"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonOK"
                android:theme="@style/Button.Login"
                style="@style/Button.Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/standard_padding"
                android:enabled="false"
                android:text="@string/setup_btn_connect"
                android:contentDescription="@string/setup_btn_connect"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom">

                <Button
                    android:id="@+id/welcome_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="onRegisterClick"
                    android:paddingBottom="@dimen/alternate_half_padding"
                    android:paddingTop="@dimen/alternate_half_padding"
                    android:text="@string/auth_register"
                    android:textColor="@color/login_text_hint_color"
                    android:contentDescription="@string/auth_register"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>